# CityBuilder2

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  main.cc  main.cc~  main.cpp
api/: CMakeLists.txt
api/include/: empty.h
api/include/graphics/: resource_manager.h  resource_sprit.h  tile.h  tilemap.h
api/src/graphics/: resource_manager.cc  resource_sprit.cc  tile.cc  tilemap.cc
core/: CMakeLists.txt  CMakeLists.txt~
core/include/: game.h  game.h~  resource_manager.h  resource_sprit.h  tile.h  tilemap.h
core/include/maths/: basic_vector.h  dynamic_queue.h  dynamic_stack.h  fixed_queue.h  fixed_stack.h  small_vector.h  vec2f.h  vec2i.h  vector.h
core/src/: game.cc  game.cc~  resource_manager.cc  resource_sprit.cc  tile.cc  tilemap.cc
core/test/: test_basic_vector.cc  test_dynamic_queue.cc  test_dynamic_stack.cc  test_fixed_queue.cc  test_fixed_stack.cc  test_small_vector.cc  test_vec2f.cc  test_vec2i.cc  test_vector.cc
game/: CMakeLists.txt
game/include/: empty.h  game.h
game/src/: game.cc
